# COMANCHE

./: CMakeLists.txt  COMANCHE.cpp  COMANCHE.h  EffectsChain.cpp  EffectsChain.h  MacroController.h  PresetManager.cpp  PresetManager.h  SampleLibrary.cpp  SampleLibrary.h  config.h
.github/workflows/: build.yml
Resources/: COMANCHE-VST3-Info.plist  resource.h
Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  EffectsChain.cpp  EffectsChain.h  MacroController.cpp  MacroController.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SampleLibrary.cpp  SampleLibrary.h  SamplerInstrument.cpp  SamplerInstrument.h  SamplerVoice.cpp  SamplerVoice.h
Source/Components/: CustomKnob.cpp  CustomKnob.h  EffectsPanel.cpp  EffectsPanel.h  SampleListPanel.cpp  SampleListPanel.h
